@@ -1,5 +1,5 @@
 /*
- * "$Id: ppd.c,v 1.107 2003/07/06 20:01:37 mike Exp $"
+ * "$Id: ppd.c,v 1.108 2003/07/20 01:24:44 mike Exp $"
  *
  *   PPD file routines for the Common UNIX Printing System (CUPS).
  *
@@ -474,9 +474,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
   language = cupsLangDefault();
 
 #ifdef LC_NUMERIC
-  oldlocale = setlocale(LC_NUMERIC, "C");
+  oldlocale = _cupsSaveLocale(LC_NUMERIC, "C");
 #else
-  oldlocale = setlocale(LC_ALL, "C");
+  oldlocale = _cupsSaveLocale(LC_ALL, "C");
 #endif /* LC_NUMERIC */
 
  /*
@@ -521,19 +521,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
       * Need a string value!
       */
 
-      ppdClose(ppd);
-
-      cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-      setlocale(LC_NUMERIC, oldlocale);
-#else
-      setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
       ppd_status = PPD_MISSING_VALUE;
 
-      return (NULL);
+      goto error;
     }
 
    /*
@@ -590,21 +580,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
           if (group == NULL)
 	  {
-            ppdClose(ppd);
-
-	    ppd_free(string);
-
-            cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-            setlocale(LC_NUMERIC, oldlocale);
-#else
-            setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
             ppd_status = PPD_ALLOC_ERROR;
 
-	    return (NULL);
+	    goto error;
 	  }
 
           DEBUG_printf(("Adding to group %s...\n", group->text));
@@ -616,21 +594,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
 	if (option == NULL)
 	{
-          ppdClose(ppd);
-
-	  ppd_free(string);
-
-          cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-          setlocale(LC_NUMERIC, oldlocale);
-#else
-          setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
           ppd_status = PPD_ALLOC_ERROR;
 
-	  return (NULL);
+          goto error;
 	}
 
        /*
@@ -764,19 +730,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
       {
         ppd_free(filter);
 
-	ppdClose(ppd);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_ALLOC_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
       ppd->filters     = filter;
@@ -806,21 +762,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
       if (tempfonts == NULL)
       {
-        ppd_free(string);
-
-        ppdClose(ppd);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_ALLOC_ERROR;
 
-	return (NULL);
+	goto error;
       }
       
       ppd->fonts                 = tempfonts;
@@ -872,42 +816,18 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 	  {
 	    DEBUG_puts("Unable to get general group!");
 
-            ppdClose(ppd);
-
-	    ppd_free(string);
-
-            cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-            setlocale(LC_NUMERIC, oldlocale);
-#else
-            setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
             ppd_status = PPD_ALLOC_ERROR;
 
-	    return (NULL);
+	    goto error;
 	  }
 
 	  if ((option = ppd_get_option(temp, "PageSize")) == NULL)
 	  {
 	    DEBUG_puts("Unable to get PageSize option!");
 
-            ppdClose(ppd);
-
-	    ppd_free(string);
-
-            cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-            setlocale(LC_NUMERIC, oldlocale);
-#else
-            setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
             ppd_status = PPD_ALLOC_ERROR;
 
-	    return (NULL);
+	    goto error;
 	  }
         }
 
@@ -915,21 +835,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 	{
 	  DEBUG_puts("Unable to add Custom choice!");
 
-          ppdClose(ppd);
-
-	  ppd_free(string);
-
-          cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-          setlocale(LC_NUMERIC, oldlocale);
-#else
-          setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
           ppd_status = PPD_ALLOC_ERROR;
 
-	  return (NULL);
+	  goto error;
 	}
 
 	strlcpy(choice->text, cupsLangString(language, CUPS_MSG_VARIABLE),
@@ -941,42 +849,18 @@ ppdOpen(FILE *fp)			/* I - File to read from */
       {
 	DEBUG_puts("Unable to find PageSize option!");
 
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_INTERNAL_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
       if ((choice = ppdFindChoice(option, "Custom")) == NULL)
       {
 	DEBUG_puts("Unable to find Custom choice!");
 
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_INTERNAL_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
       choice->code = string;
@@ -1048,21 +932,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 	                             strlen(string) + 1);
         if (temp == NULL)
 	{
-          ppdClose(ppd);
-
-	  ppd_free(string);
-
-          cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-          setlocale(LC_NUMERIC, oldlocale);
-#else
-          setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
           ppd_status = PPD_ALLOC_ERROR;
 
-	  return (NULL);
+	  goto error;
 	}
 
         ppd->patches = temp;
@@ -1078,21 +950,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
       if (option)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_NESTED_OPEN_UI;
 
-	return (NULL);
+	goto error;
       }
 
      /*
@@ -1126,21 +986,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
         if (group == NULL)
 	{
-          ppdClose(ppd);
-
-	  ppd_free(string);
-
-          cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-          setlocale(LC_NUMERIC, oldlocale);
-#else
-          setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
           ppd_status = PPD_ALLOC_ERROR;
 
-	  return (NULL);
+	  goto error;
 	}
 
         DEBUG_printf(("Adding to group %s...\n", group->text));
@@ -1152,21 +1000,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
       if (option == NULL)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_ALLOC_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
      /*
@@ -1181,21 +1017,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
         option->ui = PPD_UI_PICKONE;
       else
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_BAD_OPEN_UI;
 
-	return (NULL);
+	goto error;
       }
 
       for (j = 0; j < ppd->num_attrs; j ++)
@@ -1249,21 +1073,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
       if (option)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_NESTED_OPEN_UI;
 
-	return (NULL);
+	goto error;
       }
 
      /*
@@ -1274,21 +1086,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
       if (group == NULL)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_ALLOC_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
      /*
@@ -1302,21 +1102,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
       if (option == NULL)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_ALLOC_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
      /*
@@ -1331,21 +1119,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
         option->ui = PPD_UI_PICKONE;
       else
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_BAD_OPEN_UI;
 
-	return (NULL);
+	goto error;
       }
 
       for (j = 0; j < ppd->num_attrs; j ++)
@@ -1384,40 +1160,16 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
       if (group != NULL)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_NESTED_OPEN_GROUP;
 
-	return (NULL);
+	goto error;
       }
 
       if (!string)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_BAD_OPEN_GROUP;
 
-	return (NULL);
+	goto error;
       }
 
      /*
@@ -1457,21 +1209,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
     {
       if (sscanf(string, "%f%40s%40s", &order, name, keyword) != 3)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_BAD_ORDER_DEPENDENCY;
 
-	return (NULL);
+	goto error;
       }
 
       if (keyword[0] == '*')
@@ -1595,21 +1335,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
 
       if (constraint == NULL)
       {
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_ALLOC_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
       ppd->consts = constraint;
@@ -1622,10 +1350,8 @@ ppdOpen(FILE *fp)			/* I - File to read from */
       {
         case 0 : /* Error */
 	case 1 : /* Error */
-	    ppdClose(ppd);
-  	    ppd_free(string);
 	    ppd_status = PPD_BAD_UI_CONSTRAINTS;
-	    return (NULL);
+	    goto error;
 
 	case 2 : /* Two options... */
 	   /*
@@ -1692,21 +1418,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
         * Unable to add or find size!
 	*/
 
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_ALLOC_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
       sscanf(string, "%f%f", &(size->width), &(size->length));
@@ -1725,21 +1439,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
         * Unable to add or find size!
 	*/
 
-        ppdClose(ppd);
-
-	ppd_free(string);
-
-        cupsLangFree(language);
-
-#ifdef LC_NUMERIC
-        setlocale(LC_NUMERIC, oldlocale);
-#else
-        setlocale(LC_ALL, oldlocale);
-#endif /* LC_NUMERIC */
-
         ppd_status = PPD_ALLOC_ERROR;
 
-	return (NULL);
+	goto error;
       }
 
       sscanf(string, "%f%f%f%f", &(size->left), &(size->bottom),
@@ -1808,9 +1510,9 @@ ppdOpen(FILE *fp)			/* I - File to read from */
   cupsLangFree(language);
 
 #ifdef LC_NUMERIC
-  setlocale(LC_NUMERIC, oldlocale);
+  _cupsRestoreLocale(LC_NUMERIC, oldlocale);
 #else
-  setlocale(LC_ALL, oldlocale);
+  _cupsRestoreLocale(LC_ALL, oldlocale);
 #endif /* LC_NUMERIC */
 
 #ifdef DEBUG
@@ -1919,6 +1621,26 @@ ppdOpen(FILE *fp)			/* I - File to read from */
   */
 
   return (ppd);
+
+ /*
+  * Common exit point for errors to save code size...
+  */
+
+  error:
+
+  ppd_free(string);
+
+  ppdClose(ppd);
+
+  cupsLangFree(language);
+
+#ifdef LC_NUMERIC
+  _cupsRestoreLocale(LC_NUMERIC, oldlocale);
+#else
+  _cupsRestoreLocale(LC_ALL, oldlocale);
+#endif /* LC_NUMERIC */
+
+  return (NULL);
 }
 
 
@@ -2841,5 +2563,5 @@ ppd_read(FILE *fp,			/* I - File to read from */
 
 
 /*
- * End of "$Id: ppd.c,v 1.107 2003/07/06 20:01:37 mike Exp $".
+ * End of "$Id: ppd.c,v 1.108 2003/07/20 01:24:44 mike Exp $".
  */
